<resources>
    <string name="app_name">Beatrice-Android</string>
    <string name="action_settings">Settings</string>
    <string name="start_effect">Start</string>
    <string name="stop_effect">Stop</string>
    <string name="need_record_audio_permission">"This sample needs RECORD_AUDIO permission"</string>
    <string name="status_playing">Engine Playing …</string>
    <string name="status_open_failed">Engine Failed to Open Streams!</string>
    <string name="status_record_audio_denied">Error: Permission for RECORD_AUDIO was denied</string>
    <string name="status_touch_to_begin">RECORD_AUDIO permission granted, touch START to begin</string>
    <string name="status_warning">Warnings:\n\t\tUsing the built-in microphone and speaker may cause acoustic feedback.\n\t\tBluetooth headsets may experience audio issues or latency.\n\t\tA wired connection is strongly recommended.</string>
    <string name="recording_device">Recording device</string>
    <string name="playback_device">Playback device</string>

    <string name="apiSelection">APIs</string>
    <string name="aaudio">AAudio</string>
    <string name="sles">OpenSL ES</string>

    <string name="latencySelection">Mode</string>
    <string name="low_latency">LowLatency</string>
    <string name="normal_latency">Normal</string>
    <string name="power_saving">PowerSaving</string>
    <string name="async_proc">Use Async Processing</string>
    <string name="voice_communication">Use AEC ( may increase latency )</string>

    <string name="model_label">Model</string>
    <string name="model_select">Open</string>
    <string name="model_name">model not found</string>
    <string name="voice_select">Voice</string>

    <string name="pitch_shift">PitchShift</string>
    <string name="formant_shift">FormantShift</string>
    <string name="intonation_intensity">IntonationIntensity</string>
    <string name="pitch_correction">PitchCorrection</string>
    <string name="pitch_correction_mode">PitchCorrectionMode</string>
    <string name="pcm_hard0">Hard 0</string>
    <string name="pcm_hard1">Hard 1</string>
    <string name="source_pitch_range">SourcePitchRange</string>

    <string name="input_gain">InputGain</string>
    <string name="output_gain">OutputGain</string>
    <string name="vq_neighbors">VQ Neighbors</string>

    <!-- Tab titles -->
    <string name="tab_system">System</string>
    <string name="tab_model">Main</string>
    <string name="tab_params">Params</string>
    <string name="tab_effector">Effector</string>
    <string name="tab_advanced">Advanced</string>
    <string name="tab_morphing">Morphing</string>
    <string name="tab_settings">Settings</string>

    <!-- Section headers -->
    <string name="section_model">Model</string>
    <string name="section_voice">Voice</string>
    <string name="section_pitch_formant">Pitch / Formant</string>
    <string name="section_advanced_pitch">Advanced</string>
    <string name="section_gain">Gain</string>
    <string name="section_quality">Voice Similarity</string>
    <string name="section_audio_api">Audio API</string>
    <string name="section_latency">Latency Mode</string>
    <string name="section_devices">Devices</string>

    <!-- Effector tab -->
    <string name="section_pre_fx">Pre-FX (before Beatrice)</string>
    <string name="section_post_fx">Post-FX (after Beatrice)</string>
    <string name="effector_amplifier">Amplifier</string>
    <string name="effector_rnnoise">RNNoise</string>
    <string name="effector_noise_gate">Noise Gate</string>
    <string name="effector_compressor">Compressor</string>
    <string name="effector_pre_equalizer">Pre-Equalizer</string>
    <string name="effector_post_equalizer">Post-Equalizer</string>
    <string name="effector_limiter">Limiter</string>
    <string name="gain">Gain</string>
    <string name="enabled">Enabled</string>
    <string name="threshold">Threshold</string>
    <string name="range">Range</string>
    <string name="attack">Attack</string>
    <string name="release">Release</string>
    <string name="ratio">Ratio</string>
    <string name="makeup_gain">Make-up Gain</string>
    <string name="filter_type">Filter Type</string>
    <string name="frequency">Frequency</string>
    <string name="q_value">Q</string>
    <string name="peak">Peak</string>
    <string name="input_peak">Input Peak</string>
    <string name="output_peak">Output Peak</string>
    <string name="gain_reduction">Gain Reduction</string>
    <string name="detector_level">Detector Level</string>
    <string name="rnnoise_ready">Ready</string>
    <string name="rnnoise_vad">VAD</string>
    <string name="rnnoise_ready_yes">Yes</string>
    <string name="rnnoise_ready_no">No</string>

    <!-- Preset management -->
    <string name="preset_save">Save</string>
    <string name="preset_reset">Reset to Default</string>
    <string name="preset_saved">Saved to %s</string>
    <string name="preset_reset_confirm_title">Reset All Settings</string>
    <string name="preset_reset_confirm_message">Are you sure you want to reset all parameters to default values?</string>
</resources>